feat:fixed caching in testing